syntax = "proto3";

package test;

import "test/a.proto";
import "test/b.proto";

option java_package = "io.protostuff.parser";

message TestMessage {
    int32 field = 1;

    message TestMessage1 {
        int32 field = 1;

        message TestMessage2 {
            int32 field = 1;

            message TestMessage3 {
            }
        }
    }
}


